last email has margin at bottom so doesn't overlap with global actions contacts list icon fixes

--- a/src/less/mail-thread.less
+++ b/src/less/mail-thread.less
@@ -46,7 +46,7 @@
 	}
 
 	&:last-child{
-		padding-bottom: 6.6rem;
+		margin-bottom: 6.6rem;
 	}
 	> .table{
 		margin-bottom: 0;
